# serialmidi

./: LICENSE  README.md  pyproject.toml  serialmidi.py
